Fix social icons cutoff SMCO01-391

--- a/wp-content/themes/hot97/assets/styles/components/_o-dj-hero.scss
+++ b/wp-content/themes/hot97/assets/styles/components/_o-dj-hero.scss
@@ -53,7 +53,7 @@ a.o-dj-hero__category {
     content: '';
     background-repeat: no-repeat;
     background-size: contain;
-    height: 32px;
+    height: 33px;
     width: 32px;
     margin-right: 7px;
   }
